# widget-automation-playwright-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh
backend/: run.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py  test_runner.py
backend/app/routers/: results.py  tests.py
backend/static/: index.html  script.js  styles.css
pages/: __init__.py  constructor_page.py
tests/: __init__.py  test_error_handling.py  test_exploratory.py  test_negative_scenarios.py  test_results_api.py  test_ui_constructor.py
utils/: data_provider.py
