[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "widget-automation-playwright-python"
version = "1.0.0"
description = "Автоматизированные тесты для конструктора календаря мероприятий"
readme = "README.md"
authors = [
    {name = "Максим Свирилин", email = "mak.svirilin@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "coverage==7.13.4",
    "greenlet==3.3.2",
    "idna==3.11",
    "iniconfig==2.3.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "packaging==26.0",
    "playwright==1.58.0",
    "pluggy==1.6.0",
    "pyee==13.0.1",
    "Pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-base-url==2.1.0",
    "pytest-cov==7.0.0",
    "pytest-html==4.2.0",
    "pytest-metadata==3.1.1",
    "pytest-playwright==0.7.2",
    "pytest-rerunfailures==16.1",
    "python-slugify==8.0.4",
    "requests==2.32.5",
    "text-unidecode==1.3",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.3.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[tool.pytest.ini_options]
minversion = "9.0"
pythonpath = ["."]
addopts = "-v --strict-markers --tb=short --maxfail=1"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "smoke: Быстрые тесты для проверки основной функциональности",
    "regression: Полные регрессионные тесты",
    "exploratory: Исследовательские тесты (не для регулярного запуска)",
    "xfail: Ожидаемо падающие тесты (известные проблемы)"
]

[tool.coverage.run]
source = ["pages", "tests"]
omit = [
    "*/__init__.py",
    "conftest.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "logger.error",
    "logger.warning",
    "logger.info",
    "logger.debug",
    "except Exception",
    "except:",
    "try:",
    "finally:"
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.black]
line-length = 119
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 119
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv"
]
